welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:10: error: not found: value estSurbiscuit
  } while (!estSurbiscuit)
            ^Methods:11: error: not found: value prendbiscuit
  prendbiscuit
  ^